# anote

./: CLAUDE.md  IMPROVEMENTS_TO_IMPLEMENT.md  ISSUES_TO_FIX.md  NIGHTWORK.md  index.html  package.json  vite.config.ts
raycast/: README.md  package.json  raycast-env.d.ts  tsconfig.json
raycast/src/: create-note.tsx  quick-note.tsx  search-notes.tsx  voice-note.tsx
raycast/src/lib/: anote-app.ts  bridge-timeout.test.ts  bridge-timeout.ts  bridge.ts  db.ts  types.ts
src/: editor.js  icons.js  main.js  render.js  state.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge_cli.rs  db.rs  lib.rs  main.rs  pdf.rs
src/styles/: base.css  editor.css  layout.css  notes.css  sidebar.css  theme.css
tests/: README.md  package.json
tests/perf/: run-suite.mjs  run-ui-workload.mjs  sample-process.sh
tests/perf/fixtures/: seed-data.json
tests/perf/lib/: app-control.mjs  constants.mjs  driver.mjs  metrics.mjs  reporters.mjs  scenarios.mjs
