[package]
name = "anote"
version = "0.1.0"
description = "A note-taking app"
edition = "2021"
rust-version = "1.77.2"
default-run = "anote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "anote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "anote"
path = "src/main.rs"

[[bin]]
name = "anote_bridge"
path = "src/bin/anote_bridge.rs"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
chrono = "0.4"
